--- a/cuda.vcxproj
+++ b/cuda.vcxproj
@@ -38,6 +38,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </CudaCompile>
     <CudaCompile Include="src\rt\kernels\fermi_kdtree_while_while_leafRef.cu" />
+    <CudaCompile Include="src\rt\kernels\fermi_persistent_speculative_while_while_inter.cu" />
     <CudaCompile Include="src\rt\kernels\fermi_speculative_while_while.cu">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -49,7 +50,14 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </CudaCompile>
     <CudaCompile Include="src\rt\kernels\otracer_basic.cu" />
+    <CudaCompile Include="src\rt\kernels\otracer_bidir.cu" />
     <CudaCompile Include="src\rt\kernels\otracer_shading.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_bvh_dynAlloc.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_bvh_sahTermSplit.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_nostruct.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_ondemand.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_sbvh.cu" />
+    <CudaCompile Include="src\rt\kernels\persistent_test.cu" />
     <CudaCompile Include="src\rt\kernels\tesla_persistent_packet.cu">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
