--- a/cuda.vcxproj.filters
+++ b/cuda.vcxproj.filters
@@ -13,6 +13,12 @@
     <ClInclude Include="src\rt\ray\RayGenKernels.hpp">
       <Filter>ray</Filter>
     </ClInclude>
+    <ClInclude Include="src\rt\persistentbvh\CudaPool.hpp">
+      <Filter>persistentbvh</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\persistentbvh\CudaTracerDefines.h">
+      <Filter>persistentbvh</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\rt\kernels\fermi_speculative_while_while.cu">
@@ -57,29 +63,20 @@
     <CudaCompile Include="src\rt\kernels\otracer_bidir.cu">
       <Filter>traversal</Filter>
     </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\fermi_persistent_speculative_while_while_inter.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_bvh_dynAlloc.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_bvh_sahTermSplit.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_nostruct.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_ondemand.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_sbvh.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\rt\kernels\persistent_test.cu">
-      <Filter>persistentbvh</Filter>
-    </CudaCompile>
     <CudaCompile Include="src\rt\kernels\otracer_bidir_test.cu">
       <Filter>traversal</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentbvh\persistent_bvh.cu">
+      <Filter>persistentbvh</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentbvh\rt_common.cu">
+      <Filter>persistentbvh</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentbvh\pool_common.cu">
+      <Filter>persistentbvh</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\rt\persistentbvh\warp_common.cu">
+      <Filter>persistentbvh</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +99,15 @@
   <ItemGroup>
     <None Include="src\rt\bvh\HLBVH\emitTreeKernel.cuh">
       <Filter>hybrid</Filter>
+    </None>
+    <None Include="src\rt\persistentbvh\rt_common.cuh">
+      <Filter>persistentbvh</Filter>
+    </None>
+    <None Include="src\rt\persistentbvh\warp_common.cuh">
+      <Filter>persistentbvh</Filter>
+    </None>
+    <None Include="src\rt\persistentbvh\tri_box_overlap.cuh">
+      <Filter>persistentbvh</Filter>
     </None>
   </ItemGroup>
 </Project>
