--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,4 @@
 # Acceleration structures currently supported = [BVH, KDTree]
 AccelerationStructure BVH
 # BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
-BVHBuilder SAHBVH
+BVHBuilder SplitBVH
